# File-monitor

./: CMakeLists.txt  README.md  config.h.cmake
cli/: CMakeLists.txt  fmonitor.cpp  fmonitor.h
libfile_monitor/: CMakeLists.txt  config.h.cmake
libfile_monitor/src/: error.h  event.cpp  event.h  exception.cpp  exception.h  filter.cpp  filter.h  inotify_monitor.cpp  inotify_monitor.h  log.cpp  log.h  monitor.cpp  monitor.h  monitor_factory.cpp  monitor_factory.h  path_utils.cpp  path_utils.h  poll_monitor.cpp  poll_monitor.h  string_utils.cpp  string_utils.h
